@@ -19,13 +19,12 @@ package org.apache.solr.core;
 import java.io.IOException;
 import java.io.InputStream;
 import java.lang.invoke.MethodHandles;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import org.apache.solr.cloud.ZkSolrResourceLoader;
-import org.apache.solr.common.MapSerializable;
+import org.apache.solr.common.MapWriter;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.cloud.SolrZkClient;
 import org.apache.solr.common.params.MultiMapSolrParams;
@@ -39,7 +38,7 @@ import org.slf4j.LoggerFactory;
  * The class encapsulates the request time parameters . This is immutable and any changes performed
  * returns a copy of the Object with the changed values
  */
-public class RequestParams implements MapSerializable {
+public class RequestParams implements MapWriter {
   private static final Logger log = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
 
   private final Map<String, Object> data;
@@ -66,7 +65,7 @@ public class RequestParams implements MapSerializable {
     @SuppressWarnings("unchecked")
     Map<String, Long> meta = (Map<String, Long>) copy.remove("");
     if (meta == null && version != null) {
-      meta = Collections.singletonMap("v", version);
+      meta = Map.of("v", version);
     }
     Map invariants = (Map) copy.remove(INVARIANTS);
     Map appends = (Map) copy.remove(APPENDS);
@@ -113,8 +112,9 @@ public class RequestParams implements MapSerializable {
   }
 
   @Override
-  public Map<String, Object> toMap(Map<String, Object> map) {
-    return getMapWithVersion(data, znodeVersion);
+  public void writeMap(EntryWriter ew) throws IOException {
+    ew.put(ConfigOverlay.ZNODEVER, znodeVersion);
+    data.forEach(ew::putNoEx);
   }
 
   public static Map<String, Object> getMapWithVersion(Map<String, Object> data, int znodeVersion) {
@@ -130,7 +130,9 @@ public class RequestParams implements MapSerializable {
     Map p = (Map) deepCopy.get(NAME);
     if (p == null) deepCopy.put(NAME, p = new LinkedHashMap<>());
     if (paramSet == null) p.remove(name);
-    else p.put(name, paramSet.toMap(new LinkedHashMap<>()));
+    else {
+      p.put(name, Utils.convertToMap(paramSet, new LinkedHashMap<>()));
+    }
     return new RequestParams(deepCopy, znodeVersion);
   }
 
@@ -208,7 +210,7 @@ public class RequestParams implements MapSerializable {
   public static final String INVARIANTS = "_invariants_";
 
   @SuppressWarnings({"unchecked"})
-  public static class ParamSet implements MapSerializable {
+  public static class ParamSet implements MapWriter {
     private final Map<String, Object> defaults, appends, invariants;
     Map<String, VersionedParams> paramsMap;
     public final Map<String, Long> meta;
@@ -235,12 +237,11 @@ public class RequestParams implements MapSerializable {
     }
 
     @Override
-    public Map<String, Object> toMap(Map<String, Object> result) {
-      result.putAll(defaults);
-      if (appends != null) result.put(APPENDS, appends);
-      if (invariants != null) result.put(INVARIANTS, invariants);
-      if (meta != null) result.put("", meta);
-      return result;
+    public void writeMap(EntryWriter ew) throws IOException {
+      defaults.forEach(ew::putNoEx);
+      if (appends != null) ew.put(APPENDS, appends);
+      if (invariants != null) ew.put(INVARIANTS, invariants);
+      if (meta != null) ew.put("", meta);
     }
 
     @SuppressWarnings({"rawtypes"})
@@ -250,7 +251,7 @@ public class RequestParams implements MapSerializable {
           mergeMaps(Utils.getDeepCopy(defaults, 2), p.defaults),
           mergeMaps(Utils.getDeepCopy(invariants, 2), p.invariants),
           mergeMaps(Utils.getDeepCopy(appends, 2), p.appends),
-          mergeMaps(Utils.getDeepCopy(meta, 2), Collections.singletonMap("v", getVersion() + 1)));
+          mergeMaps(Utils.getDeepCopy(meta, 2), Map.of("v", getVersion() + 1)));
     }
 
     private static <K, V> Map<K, V> mergeMaps(Map<K, V> m1, Map<K, V> m2) {
