@@ -44,11 +44,10 @@ import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Function;
 import java.util.function.Supplier;
-import org.apache.http.NoHttpResponseException;
 import org.apache.solr.SolrTestCaseJ4;
 import org.apache.solr.client.solrj.SolrRequest;
 import org.apache.solr.client.solrj.SolrServerException;
-import org.apache.solr.client.solrj.apache.LBHttpSolrClient;
+import org.apache.solr.client.solrj.jetty.LBJettySolrClient;
 import org.apache.solr.client.solrj.request.UpdateRequest;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.cloud.ClusterState;
@@ -94,15 +93,18 @@ public class CloudSolrClientCacheTest extends SolrTestCaseJ4 {
     }
     Map<String, Function<?, ?>> responses = new HashMap<>();
     NamedList<Object> okResponse = new NamedList<>();
-    okResponse.add("responseHeader", new NamedList<>(Collections.singletonMap("status", 0)));
+    okResponse.add("responseHeader", new NamedList<>(Map.of("status", 0)));
 
-    LBHttpSolrClient mockLbclient = getMockLbHttpSolrClient(responses);
+    LBJettySolrClient mockLbclient = getMockLbHttpSolrClient(responses);
     AtomicInteger lbhttpRequestCount = new AtomicInteger();
     try (ClusterStateProvider clusterStateProvider = getStateProvider(livenodes, refs);
         CloudSolrClient cloudClient =
-            new RandomizingCloudSolrClientBuilder(clusterStateProvider)
-                .withLBHttpSolrClient(mockLbclient)
-                .build()) {
+            new RandomizingCloudSolrClientBuilder(clusterStateProvider) {
+              @Override
+              protected LBSolrClient createOrGetLbClient(HttpSolrClient myClient) {
+                return mockLbclient;
+              }
+            }.build()) {
       livenodes.addAll(Set.of("192.168.1.108:7574_solr", "192.168.1.108:8983_solr"));
       ClusterState cs =
           ClusterState.createFromJson(
@@ -120,7 +122,7 @@ public class CloudSolrClientCacheTest extends SolrTestCaseJ4 {
               return new SocketException("TEST");
             }
             if (i == 3) {
-              return new NoHttpResponseException("TEST");
+              return new ConnectException("TEST");
             }
             return okResponse;
           });
@@ -298,9 +300,9 @@ public class CloudSolrClientCacheTest extends SolrTestCaseJ4 {
   }
 
   @SuppressWarnings({"unchecked"})
-  private LBHttpSolrClient getMockLbHttpSolrClient(Map<String, Function<?, ?>> responses)
+  private LBJettySolrClient getMockLbHttpSolrClient(Map<String, Function<?, ?>> responses)
       throws Exception {
-    LBHttpSolrClient mockLbclient = mock(LBHttpSolrClient.class);
+    var mockLbclient = mock(LBJettySolrClient.class);
 
     when(mockLbclient.request(any(LBSolrClient.Req.class)))
         .then(
@@ -333,7 +335,7 @@ public class CloudSolrClientCacheTest extends SolrTestCaseJ4 {
 
       @Override
       public List<String> resolveAlias(String collection) {
-        return Collections.singletonList(collection);
+        return List.of(collection);
       }
 
       @Override
@@ -420,6 +422,11 @@ public class CloudSolrClientCacheTest extends SolrTestCaseJ4 {
     @Override
     public ClusterStateProvider getClusterStateProvider() {
       return provider;
+    }
+
+    @Override
+    public HttpSolrClient getHttpClient() {
+      throw new UnsupportedOperationException();
     }
 
     @FunctionalInterface
